--- a/bestshop/sass/theme.scss
+++ b/bestshop/sass/theme.scss
@@ -5,25 +5,24 @@
 *	Version: 1.0.0
 *	Description: This is html5 Sass template 
 *******************************************/
-
 // Override default value for $dir in directional.scss
 $dir: ltr;
 
-//** simple and lightweight mixin library for Sass **//
+//** simple and lightweight mixin library for Sass **
 //-- url : http://bourbon.io/docs ---
 @import 'bourbon/bourbon';
 
-//** Mixins for Rem Font Sizing **//
+//** Mixins for Rem Font Sizing **
 //-- url : http://hugogiraudel.com/2013/03/18/ultimate-rem-mixin/
-@import 'utilities/rem';
+@import 'directional/rem';
 
-//** Variables for responsive design in bootstrap with sass **//
+//** Variables for responsive design in bootstrap with sass **
 //-- url : https://gist.github.com/webinfinita/11407836
-@import 'utilities/bootstrap_breakpoints';
+@import 'directional/bootstrap_breakpoints';
 
-//** Makes supporting both left-to-right (LTR) and right-to-left (RTL) easy.**//
+//** Makes supporting both left-to-right (LTR) and right-to-left (RTL) easy.**
 //-- url : https://github.com/tysonmatanich/directional-scss
-@import 'utilities/directional';
+@import 'directional/directional';
 
 //Mixins Utilities & Variables
 @import 'utilities/theme_variables';
@@ -34,6 +33,7 @@ $dir: ltr;
 @import 'theme/sitemap';
 @import 'theme/login';
 @import 'theme/mainmenu';
+// @import 'theme/layout';
 @import 'theme/module';
 @import 'theme/blog';
 @import 'theme/garenal';
@@ -41,10 +41,12 @@ $dir: ltr;
 @import 'theme/productlist';
 @import 'theme/productdetail';
 
-//Display Show Layout Header & Footer
+//Display Show Layout Header
 @import 'header/header';
+
+//Display Show Layout Footer
 @import 'footer/footer';
 
-//Display Show Layout Home 1
-@import 'layout/layout1';
+//Display Show Layout Home 3
+@import 'layout/layout4';
 
