--- a/bestshop/sass/theme/_module.scss
+++ b/bestshop/sass/theme/_module.scss
@@ -515,6 +515,7 @@ ul.breadcrumb {
 
 .content-aside .product-simple{
     position: relative;
+    margin-bottom: 15px;
     h3.modtitle{
         position: relative;
         font-size: 16px;
