--- a/bestshop/sass/theme/_productdetail.scss
+++ b/bestshop/sass/theme/_productdetail.scss
@@ -112,7 +112,7 @@
         }
         .box-info-product{float: $left; width: 100%; margin-top: 25px;
             label{float: $left;font-weight: 700;font-size: 14px;color: #222; text-transform: uppercase;margin: 0;
-                padding-#{$right}: 15px; line-height: 40px;}
+                padding-#{$right}: 10px; line-height: 40px;}
             .quantity .quantity-control{float: $left;margin: 0;position: relative;
                 
 
@@ -153,6 +153,13 @@
 
                         &.text{display: none;}
                         &:hover{background: $linkColor; color: #fff;}
+                        &.addToCart{
+                            background: $gray;
+                            color: #fff;
+                            &:hover{
+                                background: $linkColor;
+                            }
+                        }
                     }
                 }
                 
@@ -182,7 +189,7 @@
                             text-align: center;
                             color: #fff;
                             margin-#{$right}: 10px;
-                            border-radius: 3px;
+                            
                             &:hover{
                                 background: #16478a;
                             }
@@ -371,21 +378,92 @@
     .modtitle{
         text-transform: uppercase; color: #222; font-size: 18px; font-weight: 600;
     }
-    .yt-content-slider{
-        position: static;
-        .owl2-controls{
-            padding: 10px;
-            .owl2-nav{
-                @include owl2-nav-style8(20px,20px,26px);
-
-                > div {
+    .so-listing-tabs{
+        .ltabs-tabs-container{
+            display: block;
+            overflow: hidden;
+            border: none;
+            position: relative;
+            ul.ltabs-tabs{
+                float: $left;
+                li.ltabs-tab{
+                    padding: 0;
+                    padding-#{$right}: 30px;
+                    margin: 0;
+                    text-transform: uppercase;
+                    position: relative;
+                    &.tab-sel, &:hover{
+                        span{
+                            color: #222;
+                        }
+                        &:after{
+                            width: 100px;
+                        }
+                    }
                     &:after{
-                        display: none;
+                        content: "";
+                        display: block;
+                        width: 0;
+                        height: 2px;
+                        position: absolute;
+                        bottom: 0;
+                        background: $linkColor;
+                        #{$left}: 0;
+                        z-index: 2;
+                        @include transition(all 0.3s ease);
+                    }
+                    span{
+                        color: #999999;
+                        font-size: 18px;
+                        font-weight: 700;
+                        padding: 0;
+                    }
+                    &:first-child span{
+                        padding-#{$left}: 0;
+                        position: relative;
+                        &:after{
+                            content: "";
+                            display: block;
+                            width: 1px;
+                            height: 15px;
+                            background: #999999;
+                            position: absolute;
+                            top: 3px;
+                            #{$right}: -15px;
+                        }
                     }
                 }
             }
+            &:after{
+                content: "";
+                display: block;
+                width: 100%;
+                height: 2px;
+                background: #ebebeb;
+                position: absolute;
+                bottom: 0;
+                #{$left}: 0;
+            }
+        }
+        .ltabs-items-container{
+            overflow: visible;
+            .ltabs-items-inner{
+                overflow: visible;
+            }
+            .owl2-controls{
+                padding: 10px;
+                .owl2-nav{
+                    @include owl2-nav-style8(20px,20px,26px);
+                    top: -58px;
+                    > div {
+                        &:after{
+                            display: none;
+                        }
+                    }
+                }
 
-        } 
+            } 
+        }
     }
 
     .owl-dots{display: none;} 
@@ -447,4 +525,67 @@
     &.policy2 a span,
     &.policy3 a span,
     &.policy4 a span{width: 53px;}
+}
+
+
+//== POLICY RIGHT COLUM ==
+.content-aside{
+
+    .trande{
+        padding: 20px;
+        margin-bottom: 30px;
+        border: 1px solid #ebebeb;
+        border-radius: 3px;
+        h3{
+            font-size: 14px;
+            font-weight: 700;
+            color: #222;
+            text-transform: uppercase;
+            margin: 10px 0 20px;
+        }
+        ul{
+            padding-#{$left}: 20px;
+            li{
+                list-style-type: disc;
+                margin: 10px 0;
+            }
+        }
+    }
+
+    .policy-product{
+        padding: 0 20px;
+        margin-bottom: 30px;
+        border: 1px solid #ebebeb;
+        border-radius: 3px;
+        ul li{
+            &:last-child .policy{
+                border: none;
+            }
+        }
+        .policy{
+            padding: 20px 0;
+            border-bottom: 1px solid #ebebeb;
+            .icon{
+                display: inline-block;
+                font-size: 40px;
+                float: $left;
+                padding-top: 10px;
+            }
+            .policy-info{
+                padding-#{$left}: 55px;
+                h4{
+                    text-transform: uppercase;
+                    color: #222;
+                }
+            }
+            &:hover{
+                cursor: pointer;
+                .icon, .policy-info h4{
+                    color: #ff3c20;
+                    
+                }
+            }
+        }
+        
+    }
 }
